# IPoverObexVxp

./: CMakeLists.txt  CMakePresets.json
IPtoStream/: CMakeLists.txt  IPtoStream.cpp  IPtoStream.h  ItemMng.h  Log.cpp  Log.h  PacketMaker.cpp  PacketMaker.h  PacketReader.cpp  PacketReader.h  TCP.cpp  TCP.h  TCPListener.cpp  TCPListener.h  TCPSock.cpp  TCPSock.h
bt/: CMakeLists.txt  bt.c  bt.h  bt_inject.c
bt_opp/: CMakeLists.txt  opp.c  opp.h  opp_inject.c  opp_types.h
cmake/: AddMreExec.cmake  toolchain-arm-none-eabi.cmake
common/: c_fix.c  gccmain.c
console/: CMakeLists.txt  console.c  console.h
core/: CMakeLists.txt  c_fix.c  cpp_fix.cpp
main/: CMakeLists.txt  main.cpp
resources/: CMakeLists.txt
run/run_in_MoDis/: CMakeLists.txt
tcp/: CMakeLists.txt  stcp.h  tcp.c
